--- a/app/src/main/res/layout/future_recycler_item.xml
+++ b/app/src/main/res/layout/future_recycler_item.xml
@@ -28,13 +28,27 @@
                 android:id="@+id/wallpaperImageFut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="5dp"
                 android:scaleType="center"
                 tools:srcCompat="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/very_black"
+                android:backgroundTint="@color/very_black"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:text="СКОРО"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/titleTextFut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="5dp"
                 android:textColor="@color/white" />
 
             <TextView
