--- a/app/src/main/res/layout/future_recycler_item.xml
+++ b/app/src/main/res/layout/future_recycler_item.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/wallpaperImageFut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clipToOutline="true"
                 android:paddingTop="5dp"
                 android:scaleType="center"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -36,8 +37,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/very_black"
-                android:backgroundTint="@color/very_black"
+                android:background="@drawable/future_bg_rounded"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:text="СКОРО"
